first steps in desktop module

--- a/desktop/src/main/resources/strings.properties
+++ b/desktop/src/main/resources/strings.properties
@@ -1,2 +1,16 @@
+cloud_connection_failed=Connection failed: %s
+connect=Connect
+connecting=Connecting...
+error=Error
 exit=Exit
+fatal_error=Fatal error
+fatal_error_alert=An unrecoverable error ocurred and the application will be closed.\n\
+Further information in the log files.
 file=File
+host=Host
+login_and_password=Login and password
+negotiation_error=negotiation error
+net_connection_failed=network error: %s
+port=Port
+quick_connection=Quick connection
+unknown_host=unknown host %S
