added secure connection option

--- a/desktop/src/main/resources/strings.properties
+++ b/desktop/src/main/resources/strings.properties
@@ -13,4 +13,5 @@ negotiation_error=negotiation error
 net_connection_failed=network error: %s
 port=Port
 quick_connection=Quick connection
+secure_connection=Secure connection
 unknown_host=unknown host %S
