added error descriptions

--- a/desktop/src/main/resources/strings.properties
+++ b/desktop/src/main/resources/strings.properties
@@ -15,3 +15,33 @@ port=Port
 quick_connection=Quick connection
 secure_connection=Secure connection
 unknown_host=unknown host %S
+init_ok=authentication success
+init_error_unknown=unknown error
+init_error_body_too_large=request is too big
+init_error_invalid_cmd=invalid authentication method
+init_error_auth_failed=invalid credentials
+init_error_malformed_cmd=malformed command
+init_error_invalid_invite_code=your invite code is invalid
+init_error_user_exists=username is taken
+init_error_invalid_username=invalid username
+request_ok=request success
+request_error_unknown=unknown error
+request_switch_ok=switching to data mode
+request_error_body_too_large=request is too big
+request_error_invalid_cmd=unknown request type
+request_error_malformed_cmd=malformed request
+request_error_not_found=not found
+request_error_not_a_directory=not a directory
+request_error_forbidden=forbidden
+request_error_invalid_name=invalid name
+request_error_invalid_type=invalid type
+request_error_exists=object exists
+request_error_busy=object is busy
+request_error_not_a_file=not a plain file
+request_error_too_many_fds=too many files open
+request_error_bad_fd=bad file descriptor
+request_error_end_of_file=end of file
+request_error_not_supported=operation not supported
+request_error_read_block_is_too_large=block is too big
+request_error_directory_is_not_empty=directory is not empty
+auth_failed=authentication error (%s)
