added table to show files

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -45,3 +45,5 @@ request_error_not_supported=operation not supported
 request_error_read_block_is_too_large=block is too big
 request_error_directory_is_not_empty=directory is not empty
 auth_failed=authentication error (%s)
+file_type=Type
+file_name=Name
