[desktop] added loading message

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -47,3 +47,4 @@ request_error_directory_is_not_empty=directory is not empty
 auth_failed=authentication error (%s)
 file_type=Type
 file_name=Name
+loading=Loading...
