[desktop] implemented navigation bar functionality

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -50,3 +50,9 @@ file_name=Name
 loading=Loading...
 connection_lost=Connection lost: %s
 go_up=Go to parent folder
+go=Go
+invalid_path=Invalid path: %s
+path_format_alert=first symbol of the path must be ~ or #
+request_error=Request error: %s
+file_not_found=File "%s" not found
+invalid_node_id=Invalid file id '%s'
