[desktop] added status bar

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -56,3 +56,4 @@ path_format_alert=first symbol of the path must be ~ or #
 request_error=Request error: %s
 file_not_found=File "%s" not found
 invalid_node_id=Invalid file id '%s'
+files_count=Files: %d, directories: %d
