[desktop] added UI style setting

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -57,3 +57,5 @@ request_error=Request error: %s
 file_not_found=File "%s" not found
 invalid_node_id=Invalid file id '%s'
 files_count=Files: %d, directories: %d
+settings=Settings
+look_and_feel=UI style
