[desktop] added tasks panel and simple test task

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -59,3 +59,5 @@ invalid_node_id=Invalid file id '%s'
 files_count=Files: %d, directories: %d
 settings=Settings
 look_and_feel=UI style
+tasks=Tasks
+upload=Add files...
