[desktop] optimizations for token connection feature

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -24,6 +24,7 @@ init_error_malformed_cmd=malformed command
 init_error_invalid_invite_code=your invite code is invalid
 init_error_user_exists=username is taken
 init_error_invalid_username=invalid username
+init_error_invalid_token=Invalid token
 request_ok=request success
 request_error_unknown=unknown error
 request_switch_ok=switching to data mode
