[desktop] added file uploading feature

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -62,3 +62,10 @@ settings=Settings
 look_and_feel=UI style
 tasks=Tasks
 upload=Add files...
+preparing=Preparing...
+pending=Pending...
+uploading=Uploading files... (%d of %d uploaded)
+completed=Completed
+cancelled=Cancelled
+suspended=Suspended
+task_upload=Upload files to %s
