[desktop] fixed a bug

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -68,5 +68,5 @@ uploading=Uploading files... (%d of %d uploaded)
 completed=Completed
 cancelled=Cancelled
 suspended=Suspended
-task_upload=Upload files to %s
+task_upload=Upload files
 new_window=New window
