[desktop] added file removing feature

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -70,3 +70,6 @@ cancelled=Cancelled
 suspended=Suspended
 task_upload=Upload files
 new_window=New window
+task_delete=Delete files
+removing=Removing files... (%d of %d removed)
+delete=Delete
