[desktop] added downloading feature

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -1,7 +1,7 @@
 cloud_connection_failed=Connection failed: %s
 connect=Connect
 connecting=Connecting...
-error=Error
+error_title=Error
 exit=Exit
 fatal_error=Fatal error
 fatal_error_alert=An unrecoverable error ocurred and the application will be closed.\n\
@@ -64,12 +64,18 @@ tasks=Tasks
 upload=Add files...
 preparing=Preparing...
 pending=Pending...
-uploading=Uploading files... (%d of %d uploaded)
+uploading=%d of %d uploaded
 completed=Completed
 cancelled=Cancelled
 suspended=Suspended
 task_upload=Upload files
 new_window=New window
 task_delete=Delete files
-removing=Removing files... (%d of %d removed)
+removing=%d of %d removed
 delete=Delete
+downloads=Downloads
+error=Error: %s
+file_exists=file exists
+save=Save
+task_download=Download files
+downloading=%d of %d downloaded
