[desktop] usability improvements + bug fixes

--- a/desktop/src/main/resources/assets/bundles/strings.properties
+++ b/desktop/src/main/resources/assets/bundles/strings.properties
@@ -79,3 +79,4 @@ file_exists=file exists
 save=Save
 task_download=Download files
 downloading=%d of %d downloaded
+wait_for_tasks=Please wait for unfinished tasks to complete
